[package]
name = "calculator"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"
test = false

[[bin]]
name = "repl"
test = false

[features]
default = ["interpreter"]
interpreter = []
jit = ["inkwell"]
vm = []

[dependencies]
anyhow = { workspace = true }
cfg-if = { workspace = true }
inkwell = { workspace = true, optional = true }
pest = { workspace = true }
pest_derive = { workspace = true }
rustyline = { workspace = true }
